# React-Native-Python-Bridge

./: .gitignore  App.tsx  README.md  RNHelloWorld.podspec  RNPythonBridge.podspec  app.json  metro.config.js  package-lock.json  package.json  pythonBridge.ts
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/assets/python/: hello.py
android/app/src/main/assets/python3.13/: _sysconfigdata__android_aarch64-linux-android.py
android/app/src/main/assets/python3.13/config-3.13-aarch64-linux-android/: Makefile  Setup.stdlib  python-config.py
android/app/src/main/cpp/: AndroidBridge.cpp  CMakeLists.txt
android/app/src/main/cpp/include/: pyconfig.h
android/app/src/main/res/values/: strings.xml
android/include/: pyconfig.h
cpp/: HelloWorld.cpp  HelloWorld.h  PythonBridge.cpp  PythonBridge.h  PythonBridge2.cpp
ios/: HelloWorldModule.h  HelloWorldModule.mm  Podfile  PythonBridgeModule.h  PythonBridgeModule.mm
ios/RNPythonBridge/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/RNPythonBridge.xcodeproj/: project.pbxproj
ios/RNPythonBridge.xcodeproj/xcshareddata/xcschemes/: RNPythonBridge.xcscheme
ios/RNPythonBridge.xcworkspace/: contents.xcworkspacedata
ios/include/: pyconfig.h
ios/lib/python3.13/: _sysconfigdata__ios_.py
ios/lib/python3.13/urllib/: parse.py
python/: hello.py  numpy_test.py
scripts/: build_python_android.sh  build_python_ios.sh  download_python_android.sh  practice.sh
scripts/cross-build/: cross-pip  recipes.json  toolchain.cmake
(+4 files in other folders)
